[package]
description = "Parser for the OpenVPN protocol"
license = "MIT/Apache-2.0"
keywords = ["OpenVPN","protocol","parser","nom"]
homepage = "https://github.com/rusticata/openvpn-parser"
repository = "https://github.com/rusticata/openvpn-parser.git"
documentation = "https://docs.rs/openvpn-parser"
name = "openvpn-parser"
version = "0.2.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parsing"]

[dependencies]
nom = "3.0"
rusticata-macros = "0.4"
