[package]
description = "Parser for the OpenVPN protocol"
license = "MIT/Apache-2.0"
keywords = ["OpenVPN","protocol","parser","nom"]
homepage = "https://github.com/rusticata/openvpn-parser"
repository = "https://github.com/rusticata/openvpn-parser.git"
documentation = "https://docs.rs/openvpn-parser"
name = "openvpn-parser"
version = "0.3.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parsing"]

[dependencies]
nom = "4.0"
rusticata-macros = {version="0.5.0", git='https://github.com/rusticata/rusticata-macros.git', branch='nom4'}
