[package]
description = "Parser for the OpenVPN protocol"
license = "MIT/Apache-2.0"
keywords = ["OpenVPN","protocol","parser","nom"]
homepage = "https://github.com/rusticata/openvpn-parser"
repository = "https://github.com/rusticata/openvpn-parser.git"
documentation = "https://docs.rs/openvpn-parser"
name = "openvpn-parser"
version = "0.5.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2018"

[dependencies]
nom = "6.0"
rusticata-macros = "3.0"
